[gd_scene load_steps=6 format=3 uid="uid://bilai15byqef2"]

[ext_resource type="Theme" uid="uid://hheneshfv1b2" path="res://ui/themes/your_theme.tres" id="1_0kumn"]
[ext_resource type="Script" path="res://ui/screens/pause-menu/pause_menu.gd" id="2_0mnak"]
[ext_resource type="PackedScene" uid="uid://cv271fh4d2p13" path="res://ui/components/settings-menu/settings_menu.tscn" id="4_e3p6x"]

[sub_resource type="LabelSettings" id="LabelSettings_v8ayn"]
font_size = 61

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4jql"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0.329412, 0.501961, 0.768627, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="PauseMenuScreen" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 98.0
offset_top = 54.0
offset_right = 98.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.684292, 0.684292)
theme = ExtResource("1_0kumn")
script = ExtResource("2_0mnak")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPauseMenuPopup" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_0kumn")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MainPauseMenuPopup"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="PausedLbl" type="Label" parent="CenterContainer/MainPauseMenuPopup/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_v8ayn")
horizontal_alignment = 1

[node name="ContinueBtn" type="Button" parent="CenterContainer/MainPauseMenuPopup/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="CenterContainer/MainPauseMenuPopup/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="ExitToMainMenuBtn" type="Button" parent="CenterContainer/MainPauseMenuPopup/VBoxContainer"]
layout_mode = 2
text = "Quit to title screen"

[node name="ExitGameBtn" type="Button" parent="CenterContainer/MainPauseMenuPopup/VBoxContainer"]
visible = false
layout_mode = 2
text = "Quit game"

[node name="SettingsMenuPopup" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("1_0kumn")
theme_override_styles/panel = SubResource("StyleBoxFlat_q4jql")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/SettingsMenuPopup"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SettingsMenu" parent="CenterContainer/SettingsMenuPopup/VBoxContainer" instance=ExtResource("4_e3p6x")]
layout_mode = 2

[node name="SaveAndBackBtn" type="Button" parent="CenterContainer/SettingsMenuPopup/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Save and back"

[connection signal="pressed" from="CenterContainer/MainPauseMenuPopup/VBoxContainer/ContinueBtn" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="CenterContainer/MainPauseMenuPopup/VBoxContainer/SettingsButton" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="CenterContainer/MainPauseMenuPopup/VBoxContainer/ExitToMainMenuBtn" to="." method="_on_btn_exit_to_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/MainPauseMenuPopup/VBoxContainer/ExitGameBtn" to="." method="_on_btn_exit_game_pressed"]
[connection signal="pressed" from="CenterContainer/SettingsMenuPopup/VBoxContainer/SaveAndBackBtn" to="." method="_on_save_and_back_btn_pressed"]
